--- a/src/app/views/admin/users/show.html.erb
+++ b/src/app/views/admin/users/show.html.erb
@@ -1,2 +1,30 @@
-<h1>Admin::Users#show</h1>
-<p>Find me in app/views/admin/users/show.html.erb</p>
+<h1>ユーザー詳細</h1>
+
+<%= link_to "一覧へ", admin_users_path, class: 'btn butn_primary' %>
+
+<ul>
+  <li>
+    名前：<%= link_to @user.name, [:admin, @user]%>
+  </li>
+  <li>
+    メールアドレス：<%= @user.email %>
+  </li>
+  <li>
+    管理者権限の有無：<%= @user.admin? ? 'あり' : 'なし' %>
+  </li>
+  <li>
+    登録日時：<%= @user.created_at %>
+  </li>
+  <li>
+    更新日時：<%= @user.updated_at %>
+  </li>
+  <li>
+    <%= link_to "編集", edit_admin_user_path(@user), class: 'btn btn-primary mr-3' %>
+  </li>
+    <li>
+    <%= link_to "削除", [:admin, @user], method: :delete, data: { confirm: "ユーザー「#{@user.name}」を削除します。よろしいですか？" }, class: 'btn btn-danger' %>
+  </li>
+  <li>
+    ---------------
+  </li>
+</ul>
