--- a/src/app/views/admin/users/new.html.erb
+++ b/src/app/views/admin/users/new.html.erb
@@ -1,26 +1,6 @@
 <h1>ユーザー作成</h1>
+<div class="nav justify-content-end">
+  <%= link_to "一覧", admin_users_path, class: 'nav-link' %>
+</div>
 
-<%= form_with model: [:admin, @user], local: true do |f| %>
-<div class="form-group">
-<%= f.label :name, '名前' %>
-<%= f.text_field :name, class: 'form-control' %>
-</div>
-<div class="form-group">
-<%= f.label :email, 'メールアドレス' %>
-<%= f.text_field :email, class: 'form-control' %>
-</div>
-<div class="form-check">
-<%= f.label :admin, class: 'form-check-label' do %>
-<%= f.check_box :admin, class: 'form-check-input' %>管理者権限
-<% end %>
-</div>
-<div class="form-group">
-<%= f.label :password, 'パスワード' %>
-<%= f.password_field :password, class: 'form-control' %>
-</div>
-<div class="form-group">
-<%= f.label :password_confirmation, 'パスワード(確認)' %>
-<%= f.password_field :password_confirmation, class: 'form-control' %>
-</div>
-<%= f.submit '登録する', class: 'btn btn-primary' %>
-<% end %>
+<%= render partial: 'form', locals: { user:@user } %>
