タスク登録確認画面実装

--- a/src/app/views/tasks/confirm_new.html.erb
+++ b/src/app/views/tasks/confirm_new.html.erb
@@ -5,8 +5,8 @@
   <li><%= @task.name %></li>
   <%= f.hidden_field :name %>
   <li>説明</li>
-  <li><%= simple_format(@task.description)) %></li>
+  <li><%= simple_format(@task.description) %></li>
   <%= f.hidden_field :description %>
   <li><%= f.submit "戻る", name: 'back', class: 'btn btn-secondary mr-3' %></li>
-  <li><%= f.submit "登録", , class: 'btn btn-primary' %></li>
+  <li><%= f.submit "登録", class: 'btn btn-primary' %></li>
 <% end %>
