--- a/src/app/views/tasks/new.html.erb
+++ b/src/app/views/tasks/new.html.erb
@@ -3,4 +3,14 @@
   <%= link_to "一覧", tasks_path, class: 'nav-link' %>
 </div>
 
-<%= render partial: 'form', locals: { task: @task} %>
+<%= form_with model: @task, local: true, url: confirm_new_task_path do |f| %>
+  <div class="form-group">
+    <%= f.label :name %>
+    <%= f.text_field :name, class: 'form-control', id: 'task_name' %>
+  </div>
+  <div class="form-group">
+    <%= f.label :description %>
+    <%= f.text_area :description, rows: 5, class: 'form-control', id: 'task_description' %>
+  </div>
+  <%= f.submit nil, class: 'btn btn-primary' %>
+<% end %>
