ransackのソート機能実装

--- a/src/app/views/tasks/index.html.erb
+++ b/src/app/views/tasks/index.html.erb
@@ -2,7 +2,7 @@
 <%= link_to "新規登録", new_task_path, class: 'btn btn-primary' %>
 
 <%= search_form_for @q do |f| %>
-<%= f.label :name_cont, '名称' %>
+<%= sort_link(@q, :name, default_order: :asc) %>
 <%= f.search_field :name_cont %>
 <%= f.submit %>
 <% end %>
