--- a/src/app/views/tasks/index.html.erb
+++ b/src/app/views/tasks/index.html.erb
@@ -25,3 +25,8 @@
   </li>
 </ul>
 <% end %>
+<%= link_to "エクスポート", tasks_path(format: :csv), class: 'btn btn-primary mb-3' %>
+<%= form_tag csv_import_tasks_path, multipart: true, class: 'mb-3' do %>
+<%= file_field_tag :file %>
+<%= submit_tag "インポート", class:'btn btn-primary' %>
+<% end %>
